--- a/css/index.css
+++ b/css/index.css
@@ -46,11 +46,26 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+/* Body styles */
 * {
     box-sizing: border-box;
 }
-
+a{
+    text-decoration:none;
+    font-weight: bold;
+}
+nav{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 2% 25% 2% 25%;
+}
+.topimage{
+    text-align: center;
+    width: 100%;
+    margin-bottom: 2%;
+}
 html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
@@ -112,6 +127,36 @@ p {
     justify-content: center;
 }
 
+#box1{
+    background-color: teal;
+}
+#box2{
+    background-color: gold;
+}
+#box3{
+    background-color: cadetblue;
+}
+#box4{
+background-color: coral;
+}
+#box5{
+background-color: crimson;
+}
+#box6{
+background-color: forestgreen;
+}
+#box7{
+background-color: darkorchid;
+}
+#box8{
+background-color: hotpink;
+}
+#box9{
+    background-color: indigo;
+}
+#box10{
+    background-color: dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
