--- a/css/index.css
+++ b/css/index.css
@@ -53,8 +53,9 @@ table {
 a{
     text-decoration:none;
     font-weight: bold;
+    color: black;
 }
-nav{
+nav.header{
     display: flex;
     justify-content:center;
     align-items: center;
@@ -130,33 +131,43 @@ p {
 #box1{
     background-color: teal;
 }
+
 #box2{
     background-color: gold;
 }
+
 #box3{
     background-color: cadetblue;
 }
+
 #box4{
 background-color: coral;
 }
+
 #box5{
 background-color: crimson;
 }
+
 #box6{
 background-color: forestgreen;
 }
+
 #box7{
 background-color: darkorchid;
 }
+
 #box8{
 background-color: hotpink;
 }
+
 #box9{
     background-color: indigo;
 }
+
 #box10{
     background-color: dodgerblue;
 }
+
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -189,3 +200,54 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+.jumboabout{
+    text-align: center;
+}
+
+.toprow{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4%;
+    border-top: 1px dashed black;
+    padding-top: 3%;
+    margin-bottom: 5%;
+}
+
+.bottomleft, .topleft{
+    border-bottom: 1px dashed black;
+    padding-bottom: 5%;
+    margin-right: 2%;
+}
+
+.bottomright, .topright{
+    border-bottom: 1px dashed black;
+    padding-bottom: 5%;
+    margin-left: 5%;
+}
+
+.bottomrow{
+    display: flex;
+    margin-bottom: 9%;
+}
+
+button{
+    margin-top: 5%;
+    background-color: #fff;
+    padding:3% 5%;
+    border-radius: 12%;
+    font-size: 1rem;
+}
+
+.jumboabout{
+    margin-bottom: 1%;
+}
+.toprow h2, .bottomrow h2{
+margin-top: 5%;
+}
+
+.bottomcontent{
+    margin-bottom: 5%;
+}
+
